--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id='root'></div>
       
-    <script src="../client/index.js" async defer></script>
+    <script type="text/javascript" src="./bundle.js" async defer></script>
   </body>
 </html>
